# cursor-pets

./: .gitignore  README.md
.github/workflows/: release.yml
docs/: example-pet-manifest.json
src/: neko.js  pet.css  pet.html  pet.js  settings.css  settings.html  settings.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cursor.rs  lib.rs  main.rs
