[package]
name = "cursor-pet"
version = "0.1.0"
description = "A customizable retro desktop pet that chases your cursor"
authors = ["divyansh"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "cursor_pet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"

# Self-update from GitHub Releases (desktop only).
[target.'cfg(any(target_os = "linux", target_os = "windows", target_os = "macos"))'.dependencies]
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# Cross-platform global cursor position for non-Hyprland platforms (Windows,
# macOS, and X11 Linux). On Hyprland we use its IPC socket instead.
device_query = "4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
